--- a/app/assets/stylesheets/api.scss
+++ b/app/assets/stylesheets/api.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the home controller here.
+// Place all the styles related to the api controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-#top_element{
-	font-size: 3em;
-}
